[package]
name = "cave"
version = "0.1.0"
edition = "2021"
description = "CLI for managing physical nodes with PXE boot capabilities"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
ssh2 = "0.9"
dirs = "5"
tabled = "0.17"
indicatif = "0.17"
thiserror = "2"
futures-util = "0.3"
anyhow = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
libc = "0.2"
# TUI
ratatui = "0.29"
crossterm = "0.28"
